# trc

./: BENCHMARKS.md  Cargo.toml  EXAMPLES.md  README.md
.github/workflows/: build.yml  docs.yml  rust.yml  tests.yml
benches/: benchmark.rs
figures/: perfplot.py
src/: lib.rs  main.rs  tests.rs  trc.rs
