[package]
name = "trc"
version = "1.1.15"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Eric Buehler"]
description = "A thread-safe, thread reference counted smart pointer."
homepage = "https://github.com/EricLBuehler/trc"
repository = "https://github.com/EricLBuehler/trc"
keywords = ["reference-counted", "thread-safe", "smart-pointer", "memory"]
categories = ["memory-management", "data-structures", "concurrency"]

[features]
default = []
force_atomic = []
force_lock = []

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false